update config swagger
