# public/swagger.json
@@ -40,8 +40,37 @@
 					},
 					"address": {
 						"type": "string"
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
 					}
 				},
+				"required": [
+					"id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ValidateErrorJSON": {
+				"properties": {
+					"message": {
+						"type": "string",
+						"enum": [
+							"Validation failed"
+						],
+						"nullable": false
+					},
+					"details": {
+						"properties": {},
+						"additionalProperties": {},
+						"type": "object"
+					}
+				},
+				"required": [
+					"message",
+					"details"
+				],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -119,6 +148,16 @@
 								}
 							}
 						}
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorJSON"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
@@ -134,7 +173,7 @@
 					{
 						"in": "query",
 						"name": "address",
-						"required": false,
+						"required": true,
 						"schema": {
 							"type": "string"
 						}
